--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,18 +9,18 @@ environment:
   sdk: ">=2.15.0 <3.0.0"
 
 dependencies:
-  bloc: ^8.1.0
-  cloud_firestore: ^3.1.6
+  cloud_firestore: ^4.3.1
 
-  firebase_core: ^1.11.0
+  firebase_core: ^2.4.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
-  intl: ^0.18.0
+  flutterfire_ui: ^0.4.3+20
+  intl: ^0.17.0
 
 dev_dependencies:
 
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
 
